# turtlebot2_ros2

./: CMakeLists.txt  package.xml
config/: cmd_vel_mux_params.yaml  ekf.yaml  velocity_smoother_params.yaml  ydlidar.yaml  ydlidar_x4.yaml
config/kobuki/: kobuki_node_params.yaml
config/nav/: _mapper_params_online_async.yaml  _nav2_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  navigation.yaml
config/sensors/: ydlidar_x4.yaml
launch/: bringup-composed.launch.py  bringup-composed.py  bringup-with-laser.launch.py  bringup.launch.py  bringup.py  description.launch.py  ekf.launch.py  keyboard_teleop.launch.py  laser.launch.py  laser.py  laser2.py  mapping.launch.py  nav.launch.py  navigation.launch.py  navigation_launch.py  slam.launch.py  view_model.launch.py  view_navigation.launch.py  view_robot.launch.py  ydlidar.launch.py
maps/: map.pgm  map.yaml  map_1643155149.pgm  map_1643155149.yaml
rviz/: linorobot2_navigation.rviz  linorobot2_slam.rviz  model.rviz  navigation.rviz  robot.rviz  slam.rviz  ydlidar.rviz
scripts/: activate.sh  activation_button.py  auto_docking_client.py
urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro
